setting up webapp

--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -1,6 +1,6 @@
 FROM nginx
 
-ENV LAMBDA_URL="https://kj1ox23jfl.execute-api.eu-west-1.amazonaws.com"
+ENV LAMBDA_URL="https://kj1ox23jfl.execute-api.eu-west-1.amazonaws.com/prod/"
 
 COPY twitter-profile-viewer/build /usr/share/nginx/html
 COPY injectLambdaUrl.sh injectLambdaUrl.sh
